--- a/src/app/product-register-component/product-register-component.component.html
+++ b/src/app/product-register-component/product-register-component.component.html
@@ -14,6 +14,9 @@
                     <a class="nav-link" href="#">Estoque</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">Produtos cadastrados</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Em desenvolvimento</a>
                 </li>
             </ul>
