--- a/src/app/product-listing-component/product-listing-component.component.html
+++ b/src/app/product-listing-component/product-listing-component.component.html
@@ -1,1 +1,73 @@
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-4">
+      <h4>Produtos vencendo:</h4>
+      <div class="alert alert-warning" role="warning">
+        <h1><a href="#">{{ expiringProductsCount }} </a></h1> produtos estão prestes a vencer.
+      </div>
+    </div>
+    <div class="col-md-4">
+      <h4>Produtos na validade:</h4>
+      <div class="alert alert-success" role="success">
+        <h1><a href="#">{{ validProductsCount }}</a></h1> produtos na validade
+      </div>
+    </div>
+    <div class="col-md-4">
+      <h4>Produtos vencidos:</h4>
+      <div class="alert alert-danger" role="danger">
+        <h1><a href="#">{{ expiredProductsCount }}</a></h1> produtos estão vencidos.
+      </div>
+    </div>
+  </div>
+</div>
 
+<div class="container mt-5">
+  <button class="btn btn-warning" [routerLink]="['/productRegister']">Cadastrar um novo produto</button>
+</div>
+<div class="container dist">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Fornecedor</th>
+        <th scope="col">Categoria</th>
+        <th scope="col">Status</th>
+        <th scope="col">Preço</th>
+        <th scope="col">Chegada</th>
+        <th scope="col">Data de validade</th>
+        <th scope="col">Peso</th>
+        <th> # </th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let product of products">
+        <td>{{ product.id }}</td>
+        <td> {{product.name }} </td>
+        <td> {{ product.supplier }} </td>
+        <td> {{ product.category }} </td>
+        <td> {{ product.status }} </td>
+        <td> {{ product.price }} </td>
+        <td>{{ product.arrivalDate | date:'dd/MM/yyyy' }}</td>
+        <td>{{ product.expirationDate | date:'dd/MM/yyyy' }}</td>
+        <td> {{ product.weight }} </td>
+        <td> <a [routerLink]="['/products', product.id, 'edit']"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+              height="16" class="bi bi-pen" viewBox="0 0 16 16">
+              <path
+                d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708z" />
+            </svg></a>
+          <span> | </span>
+          <a (click)="deletarProduto(product.id);"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+              class="bi bi-trash" viewBox="0 0 16 16">
+              <path
+                d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+              <path
+                d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+            </svg>
+          </a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
